--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -11,8 +11,7 @@ on:
       - master
 
 jobs:
-  pytest:
-
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -57,7 +56,7 @@ jobs:
       env:
         cuda: ${{ matrix.cuda-version }}
       run: |
-        source ./scripts/actions/install_cuda_ubuntu.sh
+        source ./install_cuda_ubuntu.sh
         if [[ $? -eq 0 ]]; then
           # Set paths for subsequent steps, using ${CUDA_PATH}
           echo "Adding CUDA to CUDA_PATH, PATH and LD_LIBRARY_PATH"
