--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -36,7 +36,7 @@ jobs:
       id: pip-cache
       run: |
         python -c "from pip._internal.locations import USER_CACHE_DIR; print('::set-output name=dir::' + USER_CACHE_DIR)"
-        
+
     - name: Cache pip
       uses: actions/cache@v2.1.4
       with:
@@ -44,7 +44,7 @@ jobs:
         key: ${{ runner.os }}-py${{ matrix.python-version }}-${{ hashFiles(format('requirements-{0}.txt', matrix.type)) }}
         restore-keys: |
           ${{ runner.os }}-py${{ matrix.python-version }}-
-          
+
     - name: Install dependencies
       run: |
         pip install -r ${{ format('requirements-{0}.txt', matrix.type) }}  --upgrade --quiet --find-links https://download.pytorch.org/whl/torch_stable.html
@@ -52,13 +52,13 @@ jobs:
         pip --version
         pip list
       shell: bash
-      
+
     - name: Install CUDA
       if:  matrix.type == 'gpu'
       env:
         cuda: ${{ matrix.cuda-version }}
       run: |
-        source ./install_cuda_ubuntu.sh
+        source .github/workflows/install_cuda_ubuntu.sh
         if [[ $? -eq 0 ]]; then
           # Set paths for subsequent steps, using ${CUDA_PATH}
           echo "Adding CUDA to CUDA_PATH, PATH and LD_LIBRARY_PATH"
@@ -67,18 +67,19 @@ jobs:
           echo "LD_LIBRARY_PATH=${CUDA_PATH}/lib:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
         fi
       shell: bash
-   
-    # Specify the correct host compilers
-    - name: Install gcc and g++ 
+
+    - name: Install Ninja
       run: |
-        sudo apt-get install -y gcc g++
-        
-    - name: Run make
+        apt-get install ninja-build
+
+    - name: Run JIT Compilation
       run: |
-          sh make.sh
-          
+        cd DCN
+        python dcn_v2.py
+
     - name: Run test
       if:  matrix.type == 'cpu'
       run: |
-          cd DCN
-          python testcpu.py
+        export PYTHONPATH=${PWD}/DCN:$PYTHONPATH
+        cd tests
+        python test_cpu.py
