--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -69,8 +69,7 @@ jobs:
       shell: bash
 
     - name: Install Ninja
-      run: |
-        apt-get install ninja-build
+      run: sudo apt-get install ninja-build
 
     - name: Run JIT Compilation
       run: |
