--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -81,4 +81,5 @@ jobs:
       run: |
         export PYTHONPATH=${PWD}/DCN:$PYTHONPATH
         cd tests
-        python test_cpu.py
+        CUDA_VISIBLE_DEVICES="" python test_cpu.py
+      shell: bash
