FIx CPU wrong pytorch version

--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -81,5 +81,5 @@ jobs:
       run: |
         export PYTHONPATH=${PWD}/DCN:$PYTHONPATH
         cd tests
-        CUDA_VISIBLE_DEVICES="" python test_cpu.py
+        python test_cpu.py
       shell: bash
